--- a/Module2_Solution/css/style.css
+++ b/Module2_Solution/css/style.css
@@ -16,6 +16,7 @@ section {
     border: 1px solid black;
     background-color: #b5c4d2;
     margin: 10px;
+
 }
 
 section>h2 {
@@ -34,15 +35,19 @@ section>h2 {
 
 section.x1>h2 {
     background-color: #76b8db;
+    overflow: auto;
+
 }
 
 section.x2>h2 {
     background-color: #4f7acd;
+    overflow: auto;
 }
 
 section.x3>h2 {
     color: #e2e2e2;
     background-color: #10328a;
+    overflow: auto;
 }
 
 section>p {
